Fix wrapping of charts at top of details table page

--- a/src/App.css
+++ b/src/App.css
@@ -1320,6 +1320,7 @@ path.external {
 }
 
 .topology-page.pf-c-page__main-section,
+.table-page.pf-c-page__main-section,
 .list-page.pf-c-page__main-section {
   padding: 0;
 }
